--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BDC-2020</title>
+  <title>BDC'20</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -39,5 +39,7 @@
   <script src="./assets/js/index.js"></script>
   <script src="./assets/js/plane.js"></script>
   <script src="./assets/js/test.js"></script>
+
+
 </body>
 </html>
